story(ccls-1797) add application provider details endpoints (#16)
